# purchase_request_app

./: .gitignore  SCHEMA_CLEANUP_SUMMARY.md  build-production.ps1  diagnose_iis.ps1  eslint.config.js  example_line_item_approval_insert.py  index.html  not_requirement.txt  package-lock.json  package.json  pras_api.spec  priceEach-update-flow.md  production.env  pyproject.toml  pytest.ini  start-pras.ps1  start_pras.ps1  test_socketio_connection.html  test_user_override.py  uninstall_venv_libs.ps1  vite.config.ts  web.config  web.config.minimal
api/: __init__.py  adu_ldap_manager.py  adu_ldap_service.py  api.py  build_with_data.bat  database.py  database_manager.py  db_alchemy_service.py  db_service.py  email_service.py  email_template.html  fastapi_endpoints.txt  includes.py  ipc_service.py  ldap_manager.py  notification_manager.py  notification_template  notification_template.html  pras_api.py  pras_api.spec  pras_database_manager.py  pras_dblite_project.sql  pras_email.py  purchase_app_database.py  purchase_request_api.py  purchase_request_database.py  pydantic_schemas.py  removed_dependencies.txt  requirements.txt  requirements_clean.txt  requisition_search_service.py  run_pras.py  run_test.py  search_service.py  settings.py  start-https-iis.ps1  start-pras.ps1  test_cert.pem  test_key.pem  unused_libs.txt  (+1 more)
db/: pras.db
indexdir/: MAIN_3ba8ag7t8u3thzqe.seg  MAIN_vy5oqvlicq9ey8xl.seg  MAIN_wh91ytr3nait4v1t.seg  _MAIN_1.toc
src/: App.bak  App.css  App.tsx  AppConfig.ts  config.yaml  http-common.ts  index.css  main.tsx
ssl/: cert.pem  key.pem  purchase_cert.pfx
(+318 files in other folders)
