[project]
name = "purchase-request"
version = "1.0.0"
description = ""
authors = [{ name = "Roman Campbell", email = "roman_campbell@lawb.uscourts.gov" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-socketio[asyncio-server] (>=5.13.0,<6.0.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "reportlab (>=4.4.3,<5.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
package-mode = true  # optional; true by default

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "api"

[project.scripts]
pras-api = "api.pras_api:cli"

[tool.poetry.scripts]
pras-api = "api.pras_api:cli"